[package]
name = "lambent"
version = "0.1.0"
authors = ["Peter Ebden <peter.ebden@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.5"
log = "0.4.8"
stderrlog = "0.4.3"
humantime = "1.3.0"
hsl = "0.1.1"
signal = "0.7.0"

[lib]
name = "lambent"
path = "src/lib.rs"

[[bin]]
name = "lambent"
path = "src/main.rs"

[profile.release]
lto = true
panic = 'abort'